--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html id="Startseite">
+<html>
 	<head> 
 		<title>Rent_a_Car</title>
 		<meta charset="UTF-8">
@@ -19,7 +19,7 @@
 		</nav>
 	</header>
 	
-	<div id="startbox">
+	<main>
 		
 		<div id="bootstrapCarousel">
 			
@@ -46,14 +46,18 @@
 				<input type="text" placeholder="ZEIT" name="zeit">
 			</div>
 		
-			<input type="button" value="Anfrage starten" onclick="<!---->">
+			<input type="button" value="Anfrage starten" onclick="">
 
 		</div>
 	
-	</div>
+	</main>
 	
 	<footer>
-		&copy VON uns
+			<ul>
+				<li><a href="kontakt.html">Kontakt</a></li>
+				<li><a href="agb.html">AGB</a></li>
+				<li><a href="impressum.html">Impressum</a></li>
+			</ul>
 	</footer>
 	</body>
 </html>
