--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	
 	<body>
 	<header>
-		<a href="index.html"><img id="Logo" src="getsmartlogo.jpg" alt="LOGO"></a>
+		<a href="index.html"><img id="Logo" src="img/getsmartlogo.jpg" alt="LOGO"></a>
 		<nav>
 			<ul>
 				<li><a href="index.html">Mieten</a></li>
