--- a/ueberUns.html
+++ b/ueberUns.html
@@ -9,7 +9,7 @@
 	
 	<body>
 	<header>
-		<a href="index.html"><img id="Logo" src="getsmartlogo.jpg" alt="LOGO"></a>
+		<a href="index.html"><img id="Logo" src="img/getsmartlogo.jpg" alt="LOGO"></a>
 		<nav>
 			<ul>
 				<li><a href="index.html">Mieten</a></li>
@@ -22,8 +22,9 @@
 	<main>
 	<h1>Über uns</h1>
 	
-	<p>Hier wird ein über Uns Text stehen</p>
-
+	<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam</p>
+	
+	<img src="img/ueber_uns.jpg" alt="Ein Bild der Geschäftsführer">
 	
 	</main>
 	
