link zum Logo geändert

--- a/fahrzeugmodelle.html
+++ b/fahrzeugmodelle.html
@@ -9,7 +9,7 @@
 	
 	<body>
 	<header>
-		<a href="index.html"><img id="Logo" src="img/getsmartlogo.jpg" alt="LOGO"></a>
+		<a href="index.html"><img id="Logo" src="img/logo.jpg" alt="LOGO"></a>
 		<nav>
 			<ul>
 				<li><a href="index.html">Mieten</a></li>
@@ -20,7 +20,7 @@
 	</header>
 	
 	<main>
-	<h1>Über uns</h1>
+	<h1>Unser Fahrzeugpark</h1>
 	
 	<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam</p>
 	
