--- a/fahrzeugmodelle.html
+++ b/fahrzeugmodelle.html
@@ -22,9 +22,13 @@
 	<main>
 	<h1>Unser Fahrzeugpark</h1>
 	
-	<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam</p>
+	<div>
+	<p>
+	BMW X6<br>
+	<img src="img/bspauto.jpg" alt="LOGO"> Beschreibung über Auto
 	
-	<img src="img/ueber_uns.jpg" alt="Ein Bild der Geschäftsführer">
+	</div>
+	
 	
 	</main>
 	
