--- a/kontakt.html
+++ b/kontakt.html
@@ -9,7 +9,7 @@
 	
 	<body>
 	<header>
-		<a href="index.html"><img id="Logo" src="logo.jpg" alt="LOGO"></a>
+		<a href="index.html"><img id="Logo" src="img/logo.jpg" alt="LOGO"></a>
 		<nav>
 			<ul>
 				<li><a href="index.html">Mieten</a></li>
