--- a/kontakt.html
+++ b/kontakt.html
@@ -20,6 +20,7 @@
 	</header>
 	
 	<main>
+		<h1>Kontakt</h1>
 		<form action="">
 			<div>Sie haben Fragen, Wünsche, Anregungen oder Probleme, die Sie mit uns besprechen möchten?
 			Wir stehen Ihnen rund um die Uhr für Fragen gern zur Verfügung! 
