--- a/registrieren.html
+++ b/registrieren.html
@@ -9,8 +9,7 @@
 
 <body>
 	<header>
-		<a href="index.html"><img id="Logo" src="img/logo.jpg"
-			alt="LOGO"></a>
+		<a href="index.html"><img id="Logo" src="img/logo.jpg" alt="LOGO"></a>
 		<nav>
 			<ul>
 				<li><a href="index.html">Mieten</a></li>
@@ -26,38 +25,51 @@
 		<p>Zur Registrierung füllen Sie bitte die folgenden Felder
 			vollständig aus.</p>
 
-		<h2>Logindaten</h2>
-		<p>
-			EMail <input type="email" name="email" placeholder="EMail">
-		<p>
-		<p>
-			Passwort <input type="password" name="passwort" placeholder="Passwort">
-		</p>
-		<h2>Kundendanten</h2>
-		<!-- > TODO: Adresse -->
-		<p>
-			Anrede <select name="Anrede">
+		<form method="post" action="#">
+			<h2>Logindaten</h2>
+			<p>
+				EMail <input type="email" name="email" placeholder="EMail" required>
+			<p>
+			<p>
+				Passwort <input type="password" name="passwort"
+					placeholder="Passwort" required>
+			</p>
+			<h2>Kundendanten</h2>
+			<p>
+				Anrede <select name="Anrede">
 
-				<option value="Herr">Herr</option>
-				<option value="Frau">Frau</option>
-			</select>
-		</p>
-		<p>
-			Vorname <input type="text" name="Vorname" placeholder="Vorname">
-		<p>
-			Nachname <input type="text" name="Nachname" placeholder="Nachname">
-		</p>
-		<p>
-			Straße, Hausnummer <input type="text" name="Straße" placeholder="Straße"> <input
-				type="text" name="Hausnummer" placeholder="Hausnummer">
-		</p>
-		<p> Ort, PLZ <input type="text" name="Ort" placeholder="Ort"> <input
-				type="text" name="PLZ" placeholder="PLZ"></p>
-		
+					<option value="Herr">Herr</option>
+					<option value="Frau">Frau</option>
+				</select>
+			</p>
+			<p>
+				Vorname <input type="text" name="Vorname" placeholder="Vorname"
+					required>
+			<p>
+				Nachname <input type="text" name="Nachname" placeholder="Nachname"
+					required>
+			</p>
+			<p>
+				Straße, Hausnummer <input type="text" name="Straße"
+					placeholder="Straße"> <input type="text" name="Hausnummer"
+					placeholder="Hausnummer">
+			</p>
+			<p>
+				Ort, PLZ <input type="text" name="Ort" placeholder="Ort"> <input
+					type="text" name="PLZ" placeholder="PLZ">
+			</p>
+			<p>
+				<input type="checkbox" name="AGBs"> AGB's gelesen und
+				akzeptiert.
+			</p>
+			<p>
+				<input type="button" value="Jetzt Regestrieren!">
+			</p>
+		</form>
 
 
 
-	
+
 	</div>
 	</main>
 
