--- a/kontakt.html
+++ b/kontakt.html
@@ -21,7 +21,7 @@
 	
 	<main>
 		<h1>Kontakt</h1>
-		<form action="">
+		<form action="index.html">
 			<div>Sie haben Fragen, Wünsche, Anregungen oder Probleme, die Sie mit uns besprechen möchten?
 			Wir stehen Ihnen rund um die Uhr für Fragen gern zur Verfügung! 
 			</div>
