--- a/registrieren.html
+++ b/registrieren.html
@@ -59,7 +59,7 @@
 					type="text" name="PLZ" placeholder="PLZ">
 			</p>
 			<p>
-				<input type="checkbox" name="AGBs"> AGB's gelesen und
+				<input type="checkbox" name="AGBs"> <a href="agb.html"> AGB's</a> gelesen und
 				akzeptiert.
 			</p>
 			<p>
