--- a/agb.html
+++ b/agb.html
@@ -20,11 +20,42 @@
 	</header>
 	
 	<main>
-	<h1>AGB´s</h1>
-<p>
-Wir übernehmen keine Haftung. Der Kunde ist immer Schuld!
-</p>
+	<h1>Allgemeine Geschäftsbedingungen</h1><br /><h2>Vertragspartner</h2>Auf Grundlage dieser Allgemeinen Geschäftsbedingungen (AGB) kommt zwischen dem Kunden und <br />name<br />Vertreten durch vertreter name vertreter<br />Adresse: straße 11 a1 78256 Karkasus<br />Tel: 24424545310124545<br />Tel: 24545545445<br />Fax: 4454545<br />E-Mail-Adresse: haha@haha.de<br /><br />Handelsregister: HR<br />Handelsregisternummer: HR123<br />Umsatzsteuer-Identifikationsnummer: 123548967711<br /> , nachfolgend Anbieter genannt, der Vertrag zustande.<h2>Vertragsgegenstand</h2>Durch diesen Vertrag wird der Verkauf von Dienstleistungen  aus dem Bereich/den Bereichen Autovermietung über den Online-Shop des Anbieters geregelt. Wegen der Details des jeweiligen Angebotes wird auf die Produktbeschreibung der Angebotsseite verwiesen.<h2>Vertragsschluss</h2>Der Vertrag kommt ausschließlich im elektronischen Geschäftsverkehr über das Shop-System zustande. Dabei stellen die dargestellten Angebote eine unverbindliche Aufforderung zur Abgabe eines Angebots durch die Kundenbestellung dar, das der Anbieter dann annehmen kann.
  
+ Der Bestellvorgang zum Vertragsschluss umfasst im Shop-System folgende Schritte: <li>Auswahl des Angebots in der gewünschten Spezifikation (Größe, Farbe, Anzahl)</li><li>Einlegen des Angebots in den Warenkorb</li><li>Betätigen des Buttons 'bestellen'</li><li>Eingabe der Rechnungs- und Lieferadresse</li><li>Auswahl der Bezahlmethode</li><li>Überprüfung und Bearbeitung der Bestellung und aller Eingaben</li><li>Betätigen des Buttons 'kostenpflichtig bestellen'</li><li>Bestätigungsmail, dass Bestellung eingegangen ist</li> Mit der Zusendung der Bestellbestätigung kommt der Vertrag zustande.<h2>Vertragsdauer</h2>Der Vertrag hat vorbehaltlich einer Kündigung eine Laufzeit von 12 Monate. Der Gesamtpreisfür die Leistungen im Vertragszeitraum beträgt 1000 €.<h2>Preise, Versandkosten, Rücksendekosten</h2>Alle Preise sind Endpreise und enthalten die gesetzliche Umsatzsteuer. Neben den Endpreisen fallen je nach Versandart weitere Kosten an, die vor Versendung der Bestellung angezeigt werden. Besteht ein Widerrufsrecht und wird von diesem Gebraucht gemacht, trägt der Kunde die Kosten der Rücksendung.<h2>Zahlungsbedingungen</h2>Der Kunde hat ausschließlich folgende Möglichkeiten zur Zahlung: Barzahlung bei Abholung. Weitere Zahlungsarten werden nicht angeboten und werden zurückgewiesen.<br /> Der Rechnungsbetrag kann auch unter Abzug der in Ansatz gebrachten Versandkosten in den Geschäftsräumen des Anbieters zu den üblichen Bürozeiten in bar gezahlt werden.  Der Kunde ist verpflichtet innerhalb von 12 Tagen nach Erhalt der Rechnung den ausgewiesenen Betrag auf das auf der Rechnung angegebene Konto einzuzahlen oder zu überweisen. Die Zahlung ist ab Rechnungsdatum ohne Abzug fällig. Der Kunde kommt erst nach Mahnung in Verzug.<h2>Lieferbedingungen</h2>Die Ware wird umgehend nach bestätigtem Zahlungseingang versandt. Der Versand erfolgt durchschnittlich spätestens nach 1 Tagen. Der Unternehmer verpflichtet sich zur Lieferung am 1 Tag nach Bestelleingang. Die Regellieferzeit beträgt 1 Tage, wenn in der Artikelbeschreibung nichts anderes angegeben ist. Der Anbieter versendet die Bestellung aus eigenem Lager, sobald die gesamte Bestellung dort vorrätig ist.<h2>Vertragsgestaltung</h2>Der Kunde hat keine Möglichkeit selbst direkt auf den gespeicherten Vertragstext zuzugreifen.<h2>Widerrufsrecht und Kundendienst</h2>
+
+
+<b>Widerrufsbelehrung<br /><br />
+
+Widerrufsrecht<br /><br />
+
+Sie haben das Recht, binnen vierzehn Tagen ohne Angabe von Gründen diesen Vertrag zu widerrufen.<br /><br />
+
+Die Widerrufsfrist beträgt vierzehn Tage ab dem Tag, <br /><br />
+
+<ul><li>Im Falle eines Kaufvertrags: an dem Sie oder ein von Ihnen benannter Dritter, der nicht der Beförderer ist, die letzte Ware in Besitz genommen haben bzw. hat.</li>
+<li>Im Falle einer Vertrags über mehrere Waren, die der Verbraucher im Rahmen einer einheitlichen Bestellung bestellt hat und die getrennt geliefert werden: an dem Sie oder ein von Ihnen benannter Dritter, der nicht Beförderer ist, die letzte Ware in Besitz genommen haben bzw. hat.</li>
+<li>Im Falle eines Vertrags über die Lieferung einer Ware in mehreren Teilsendungen oder Stücken: an dem Sie oder ein von Ihnen benannter Dritter, der nicht Beförderer ist, die letzte Teilsendung oder das letzte Stück in Besitz genommen haben bzw. hat.</li>
+<li>Im Falle eines Vertrages zur regelmäßigen Lieferung von Waren über einen festgelegten Zeitraum hinweg: an dem Sie oder ein von Ihnen benannter Dritter, der nicht Beförderer ist, die erste Ware in Besitz genommen haben bzw. hat.</li>
+
+Beim Zusammentreffen mehrerer Alternativen ist der jeweils letzte Zeitpunkt maßgeblich.<br /><br />
+
+Um Ihr Widerrufsrecht auszuüben, müssen Sie uns (name, vertreter name vertreter, straße 11 78256 Karkasus 24424545310124545 haha@haha.de) mittels einer eindeutigen Erklärung (z.B. ein mit der Post versandter Brief, Telefax, oder E-Mail) über Ihren Entschluss, diesen Vertrag zu widerrufen, informieren. Sie können dafür das beigefügte Muster-Widerrufsformular verwenden, das jedoch nicht vorgeschrieben ist.<br /><br />
+
+Zur Wahrung der Widerrufsfrist reicht es aus, dass Sie die Mitteilung über die Ausübung des Widerrufsrechts vor Ablauf der Widerrufsfrist absenden.<br /><br />
+
+Folgen des Widerrufs<br /><br />
+
+Wenn Sie diesen Vertag widerrufen, haben wir Ihnen alle Zahlungen, die wir von Ihnen erhalten haben, einschließlich der Lieferkosten (mit Ausnahmen der zusätzlichen Kosten, die sich daraus ergeben, dass Sie einer andere Art der Lieferung als die von uns angebotene, günstige Standardlieferung gewählt haben), unverzüglich und spätestens binnen vierzehn Tagen ab dem Tag zurückzuzahlen, an dem die Mitteilung über Ihren Widerruf dieses Vertrags bei uns eingegangen ist. Für diese Rückzahlung verwenden wir dasselbe Zahlungsmittel, das Sie bei der ursprünglichen Transaktion eingesetzt haben, es sei denn, mit Ihnen wurde ausdrücklich etwas anderes vereinbart; in keinem Fall werden Ihnen wegen dieser Rückzahlung Entgelte berechnet. Wir können die Rückzahlung verweigern, bis wir die Waren wieder zurückerhalten haben oder bis Sie den Nachweis erbracht haben, dass Sie die Waren zurückgesandt haben, je nachdem, welches der frühere Zeitpunkt ist.<br /><br />
+
+Sie haben die Waren unverzüglich und in jedem Fall spätestens binnen vierzehn Tagen ab dem Tag, an dem Sie uns über den Widerruf dieses Vertrags unterrichten, an name, vertreter name vertreter, straße 11 78256 Karkasus 24424545310124545 haha@haha.de uns zurückzusenden oder zu übergeben. Die Frist ist gewahrt, wenn Sie die Waren vor Ablauf der Frist von vierzehn Tagen absenden.<br /><br />
+
+Sie tragen die unmittelbaren Kosten der Rücksendung der Waren.<br /><br />
+
+Sie müssen für einen etwaigen Wertverlust der Waren nur aufkommen, wenn dieser Wertverlust auf einen zur Prüfung der Beschaffenheit, Eigenschaften und Funktionsweise der Waren nicht notwendigen Umgang mit ihnen zurückzuführen ist.<br /><br />
+
+Ende der Widerrufsbelehrung</b><br /><br />
+<h2>Haftungsausschluss</h2>Schadensersatzansprüche des Kunden sind ausgeschlossen, soweit sich aus den nachfolgenden Gründen nicht etwas anderes ergibt. Dies gilt auch für den Vertreter und Erfüllungsgehilfen des Anbieters, falls der Kunde gegen diese Ansprüche auf Schadensersatz erhebt. Ausgenommen sind Schadensersatzansprüche des Kunden wegen Verletzung des Lebens, des Körpers, der Gesundheit oder wesentlicher Vertragspflichten, welche zur Erreichung des Vertragszieles notwendigerweise erfüllt werden müssen. Ebenso gilt dies nicht für Schadensersatzansprüche nach grob fahrlässiger oder vorsätzlicher Pflichtverletzung des Anbieters oder seines gesetzlichen Vertreters oder Erfüllungsgehilfen.<h2>Abtretungs- und Verpfändungsverbot</h2>Ansprüche oder Rechte des Kunden gegen den Anbieter dürfen ohne dessen Zustimmung nicht abgetreten oder verpfändet werden, es sei denn der Kunde hat ein berechtigtes Interesse an der Abtretung oder Verpfändung nachgewiesen.<h2>Sprache, Gerichtsstand und anzuwendendes Recht</h2>Der Vertrag wird in Deutsch abgefasst. Die weitere Durchführung der Vertragsbeziehung erfolgt in Deutsch. Es findet ausschließlich das Recht der Bundesrepublik Deutschland Anwendung. Für Verbraucher gilt dies nur insoweit, als dadurch keine gesetzlichen Bestimmungen des Staates eingeschränkt werden, in dem der Kunde seinen Wohnsitz oder gewöhnlichen Aufenthalt hat. Gerichtsstand ist bei Streitigkeiten mit Kunden, die kein Verbraucher, juristische Person des öffentlichen Rechts oder öffentlich-rechtliches Sondervermögen sind, Sitz des Anbieters.<h2>Salvatorische Klausel</h2>Die Unwirksamkeit einer Bestimmung dieser AGB hat keine Auswirkungen auf die Wirksamkeit der sonstigen Bestimmungen.
 	</main>
 	
 	<footer>
