bootstrap paket eingebunden

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<head> 
 		<title>Rent_a_Car</title>
 		<meta charset="UTF-8">
-		<!--<link rel="stylesheet" type="text/css" href="style.css">-->
+		<link href="css/bootstrap.min.css" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head> 
 	
 	<body>
@@ -58,6 +59,8 @@
 				<li><a href="agb.html">AGB</a></li>
 				<li><a href="impressum.html">Impressum</a></li>
 			</ul>
-	</footer>
+	</footer>  
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 	</body>
 </html>
